# agentmail-mcp

./: .gitignore  Dockerfile  README.md  mcp-manifest.json  migration-surfaces.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.json  smithery.yaml  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  public-surfaces.yml  publish-npm.yml  publish-pypi.yml  python-artifact.yml  security.yml
docs/: architecture.md  compatibility.md  migration.md  operations.md  release.md  third-party-corrections.md
introductions/: agentmail-demo.md
python/stdio-bridge/: .gitignore  README.md  pyproject.toml
python/stdio-bridge/scripts/: smoke-artifacts.sh
python/stdio-bridge/src/agentmail_mcp/: __init__.py  bridge.py
python/stdio-bridge/tests/: test_bridge.py
scripts/: audit-public-surfaces.py  check-bridge-boundaries.mjs  check-contract.mjs  check-stale-references.py  generate-manifest.mjs
src/: index.ts
tests/: server-auth.test.mjs  server-contract.test.mjs  server-http.test.mjs  server-internal-org.test.mjs  server-provisioning.test.mjs
